Add: category selected logic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,33 @@
       <h1 class="main-title">野球知識検定</h1>
       <ul>
         <li>
-          <a href="5">5・6級</a>
+          <a href="5/">5・6級</a>
+          <ul>
+            <li>
+              <a href="5?question=1">ルール</a>
+            </li>
+            <li>
+              <a href="5?question=17">記録</a>
+            </li>
+            <li>
+              <a href="5?question=60">エピソード</a>
+            </li>
+            <li>
+              <a href="5?question=163">野球用語</a>
+            </li>
+            <li>
+              <a href="5?question=178">大リーグ</a>
+            </li>
+            <li>
+              <a href="5?question=185">高校野球</a>
+            </li>
+            <li>
+              <a href="5?question=195">大学野球</a>
+            </li>
+            <li>
+              <a href="5?question=197">番外編</a>
+            </li>
+          </ul>
         </li>
       </ul>
     </section>
