--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <h1 class="main-title">野球知識検定</h1>
       <ul>
         <li>
+          <a href="4/">4級</a>
+        </li>
+        <li>
           <a href="5/">5・6級</a>
           <ul>
             <li>
